--- a/api/package.json
+++ b/api/package.json
@@ -10,9 +10,9 @@
     "mongodb": "^4.1.1",
     "mongoose": "^6.0.5",
     "multer": "^1.4.3",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "path": "^0.12.7"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "nodemon index.js"
   },
